<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.minos</groupId>
    <artifactId>minos-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>MINOS Parent</name>
    <description>Parent reactor for MINOS Code Intelligence.</description>

    <licenses>
        <license>
            <name>MINOS Proprietary Source-Available License - All Rights Reserved</name>
            <url>https://github.com/FTurleque/minos-code-intelligence/blob/main/LICENSE</url>
            <distribution>repo</distribution>
            <comments>Copyright (c) 2026 Fabrice Turleque. No general use, execution, modification, distribution or commercial license is granted.</comments>
        </license>
    </licenses>

    <modules>
        <module>minos-domain</module>
        <module>minos-engine</module>
        <module>minos-runtime-local</module>
        <module>minos-storage-local</module>
        <module>minos-provider-scip</module>
        <module>minos-integration-git</module>
        <module>minos-application</module>
        <module>minos-storage-postgresql</module>
        <module>minos-nexus</module>
        <module>minos-cli</module>
        <module>minos-api</module>
        <module>minos-mcp</module>
        <module>minos-app</module>
    </modules>

    <properties>
        <!-- CI-friendly version: release scripts override with -Drevision=... -->
        <revision>1.0.1-SNAPSHOT</revision>

        <maven.compiler.release>24</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- Local developer default. CI/release overrides this with -D...=true. -->
        <minos.postgresql.tests.required>false</minos.postgresql.tests.required>

        <scip.java.bindings.version>0.9.0</scip.java.bindings.version>
        <mcp.sdk.version>2.0.0</mcp.sdk.version>
        <!--
          Keep both Jackson generations centrally pinned. MINOS' PostgreSQL codec uses
          Jackson 2 while MCP SDK 2.0.0 brings Jackson 3 through mcp-json-jackson3.
          2.22.1 and 3.1.5 contain the 2026 security fixes required by the release gate.
        -->
        <jackson2.version>2.22.1</jackson2.version>
        <jackson3.version>3.1.5</jackson3.version>
        <slf4j.version>2.0.17</slf4j.version>
        <jgit.version>7.6.0.202603022253-r</jgit.version>
        <junit.version>5.14.4</junit.version>
        <jacoco.version>0.8.15</jacoco.version>
        <cyclonedx.maven.plugin.version>2.9.2</cyclonedx.maven.plugin.version>
        <maven.compiler.plugin.version>3.15.0</maven.compiler.plugin.version>
        <maven.surefire.plugin.version>3.5.5</maven.surefire.plugin.version>
        <maven.enforcer.plugin.version>3.6.2</maven.enforcer.plugin.version>
        <maven.jar.plugin.version>3.5.0</maven.jar.plugin.version>
        <maven.shade.plugin.version>3.6.2</maven.shade.plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson2.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>tools.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson3.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.modelcontextprotocol.sdk</groupId>
                <artifactId>mcp-bom</artifactId>
                <version>${mcp.sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-nop</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.enforcer.plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-minos-toolchain</id>
                        <goals><goal>enforce</goal></goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion><version>[24,25)</version></requireJavaVersion>
                                <requireMavenVersion><version>[3.9,4.0)</version></requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration><release>${maven.compiler.release}</release><parameters>true</parameters></configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <useModulePath>false</useModulePath>
                    <workingDirectory>${maven.multiModuleProjectDirectory}</workingDirectory>
                    <systemPropertyVariables>
                        <minos.postgresql.tests.required>${minos.postgresql.tests.required}</minos.postgresql.tests.required>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>jacoco-prepare-agent</id>
                        <goals><goal>prepare-agent</goal></goals>
                        <configuration>
                            <!--
                              minos-app runs both Surefire and Failsafe against the same
                              execution-data file. Append keeps unit-test coverage when
                              Failsafe starts so the aggregate report measures the full
                              verify lifecycle instead of only the final integration test.
                            -->
                            <append>true</append>
                        </configuration>
                    </execution>
                    <execution>
                        <id>jacoco-module-report</id>
                        <phase>verify</phase>
                        <goals><goal>report</goal></goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>